# pdf2md-kit

./: .cursorignore  .env.example  .gitignore  README.md  config.yaml  init.sh  pyproject.toml
.cursor/rules/: protect-my-prompt-folder.mdc
backend/api/: __init__.py  app.py  dependencies.py
backend/config/: __init__.py  ports.py
backend/extraction/: __init__.py  ports.py
backend/flashcard/: __init__.py  ports.py
backend/job/: ports.py
backend/shared_kernel/: contracts.py  errors.py  time.py  types.py
backend/stream/: __init__.py  ports.py
frontend/: index.html
tests/api/: test_config_and_query_routes.py  test_http_contracts_and_dependencies.py  test_single_page_preview_route.py  test_source_stream_spa_routes.py  test_write_build_output_routes.py
tests/application/: test_build_application.py  test_build_pipeline.py  test_config_application.py  test_extraction_application.py  test_job_command_application.py  test_job_query_application.py  test_single_page_preview_application.py  test_stream_application.py
tests/architecture/: test_architecture_boundaries.py  test_performance_optimization_boundaries.py  test_shared_kernel_and_contracts.py
tests/domain/: test_job_domain_rules.py
tests/e2e/: test_end_to_end_acceptance.py
tests/frontend/: test_frontend_app_shell_clients_and_store.py  test_frontend_build_output_merge_placement.py  test_frontend_index_html_config_model_options.py  test_frontend_index_html_history_panel_on_demand_regression.py  test_frontend_index_html_log_and_panel_hotspots_regression.py  test_frontend_index_html_page_editor_layout.py  (+18 more)
(+81 files in other folders)
